--- a/config.toml
+++ b/config.toml
@@ -19,24 +19,24 @@ publishDir = "docs"
     home = "Home"
     work = "Engagement"
     testimonials = "Testimonials"
-    services = "Services"
-    about = "About"
-    contact = "Contact"
+    services = "Wedding"
+    about = "About Us"
+    contact = "Contact Us"
 
     # You can add custom links before or after the default links
     # Assign a weight to define the order
     
     # prepended links
     #[[menu.prepend]]
-    #  url = "http://gohugo.io"
-    #  name = "Hugo"
+    #  url = "https://goo.gl/forms/8PgiejaQV38pTCPG2"
+    #  name = "RSVP"
     #  weight = 10
 
     # postpended links
-    #[[menu.postpend]]
-    #  url = "http://gohugo.io"
-    #  name = "External link"
-    #  weight = 10
+    [[menu.postpend]]
+      url = "http://gohugo.io"
+      name = "External link"
+      weight = 10
   
   # Hero section
   [params.hero]
@@ -126,76 +126,62 @@ publishDir = "docs"
       person = 'Alexander Hamilton, Bastard, Orphan, Son of a Whore and a Scotsman <span class="subtext">Hero and a Scholar</span>'
       img = "people_alex_hamilton.jpg"
       alt = "Alexander Hamilton"
-    
-
-
-
+  
   # Services section
   [params.services]
     enable = true
-    title = "Services"
-    description = "Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts."
+    title = "Extra Wedding Information"
+    description = "Things you should know before attending"
 
     [[params.services.item]]
-      title = "Brand &amp; Strategy"
-      description = "Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean"
-      icon = "icon-anchor"
+      title = "Food Preference and Allergies"
+      description = "Gluten-free and vegetarian options will be provided upon request! Please make sure to fill out the corresponding field on the RSVP form so that we can get an accurate count."
+      icon = "icon-user"
 
     [[params.services.item]]
-      title = "Web &amp; Interface"
-      description = "Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean"
-      icon = "icon-layers2"
+      title = "Travel & Accommodations"
+      description = "No day-of shuttles will be provided. Please find your own transportation to the venue. We will have Hotel blocks - details TBD."
+      icon = "icon-compass"
+
     [[params.services.item]]
-      title = "Photo &amp; Video"
-      description = "Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean"
-      icon = "icon-video2"
+      title = "RSVP Deadlines"
+      description = "In order for us to accurately plan out our wedding ceremony, RSVPs will need to be completed by {{ $wedding_date - 3*Time.months | date }}."
+      icon = "icon-calendar"
 
       [[params.services.item]]
-      title = "CMS &amp; eCommerce"
-      description = "Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean"      
-      icon = "icon-monitor"
+      title = "Wedding Registry"
+      description = "Our wedding registry is all online, where you can have it shipped to our home. Our wedding is out of state and it will be difficult for us to ship everything back, so please send the items directly to our home and simply bring a crad to the wedding if you so choose."      
+      icon = "icon-envelope"
 
   # About section
   [params.about]
     enable = true
-    title = "About"
-    description = "Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts."
+    title = "About Us"
+    description = "About us as a couple and individuals."
 
     [[params.about.item]]
-      name = "Jean Smith"
-      position = "Web Designer"
-      description = "Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts"
-      img = "person1.jpg"
-      alt = "Person1"
-      social = [
-        ["icon-twitter", "#"],
-        ["icon-facebook", "#"],
-        ["icon-linkedin", "#"]
-      ]
+      name = "Cassie Anderson"
+      position = "Bride"
+      description = "she's pretty good"
+      img = "people_cassie.jpg"
+      alt = "Cassie"
+      social = []
 
     [[params.about.item]]
-      name = "Rob Smith"
-      position = "Web Developer"
-      description = "Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts"
-      img = "person2.jpg"
-      alt = "Person2"
-      social = [
-        ["icon-twitter", "#"],
-        ["icon-facebook", "#"],
-        ["icon-github", "#"]
-      ]
+      name = "Cora"
+      position = "Best Puppy"
+      description = "I cannot describe this puppy, you just need to spend time with her. She's the best AROUND. Never gonna let you down.'"
+      img = "people_cora.jpg"
+      alt = "Cora"
+      social = []
 
     [[params.about.item]]
-      name = "Larry Ben"
-      position = "Web Designer"
-      description = "Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts"
-      img = "person3.jpg"
-      alt = "Person3"
-      social = [
-        ["icon-twitter", "#"],
-        ["icon-facebook", "#"],
-        ["icon-dribbble", "#"]
-      ]      
+      name = "Devon Finninger"
+      position = "Groom"
+      description = "This dude is HAWT. Good LAWDY."
+      img = "people_devon.jpg"
+      alt = "Devon"
+      social = []      
 
   # Counters section
   [params.counters]
@@ -204,57 +190,55 @@ publishDir = "docs"
     background = "full_image_1.jpg"
 
     [[params.counters.item]]
-      description = "Finished projects"
-      icon = "icon-briefcase"
-      from = 0
-      to = 89
-      interval = 50
-      speed = 5000
-
-    [[params.counters.item]]
-      description = "Lines of code"
-      icon = "icon-code"
-      from = 0
-      to = 2343409
-      interval = 50
-      speed = 5000
-
-    [[params.counters.item]]
-      description = "Cups of coffee"
-      icon = "icon-cup"
-      from = 0
-      to = 1302
-      interval = 50
-      speed = 5000
-
-    [[params.counters.item]]
-      description = "Happy clients"
+      description = "Our Days Together"
       icon = "icon-people"
+      from = 0
+      to = 2561
+      interval = 50
+      speed = 3000
+
+    [[params.counters.item]]
+      description = "Venues Researched"
+      icon = "icon-magnifier"
+      from = 0
+      to = 18
+      interval = 50
+      speed = 3000
+
+    [[params.counters.item]]
+      description = "States Inhabited"
+      icon = "icon-map"
+      from = 0
+      to = 3
+      interval = 50
+      speed = 3000
+
+    [[params.counters.item]]
+      description = "RSVPs Received"
+      icon = "icon-envelope-letter"
       from = 0
       to = 52
       interval = 50
-      speed = 5000
+      speed = 3000
 
   # Contact section
   [params.contact]
     enable = true
     map = true
-    title = "Get in touch"
-    description = "Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts."
+    title = "Contact Us!"
+    description = "If you have questions regarding the wedding, drop us a line here and we'll both get a copy."
     
     # Available icons: http://simplelineicons.com/
     details = [
-        ["icon-home", "3932 Colegrove St., San Mateo, California, <br> Our Happy home"],
-        ["icon-phone", "(910) 867-5309"],
-        ["icon-envelope", "fwd.finninger@gmail.com"],
-        ["icon-globe", '<a href="http://wedding.finninger.io/" target="_blank">wedding.finninger.io</a>']
+        ["icon-home", "3932 Colegrove St., San Mateo, California, 94403"],
+        ["icon-envelope", "fwd.finninger@gmail.com"]
       ]
 
     name = "Name"
     email = "Email"
     phone = "Phone"
     message = "Message"
-    button = "Send message"
+    button = "Send message" 
 
   # Footer section
   [params.footer]
